<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/confirm_dialog_background"
    android:padding="20sp">

    <TextView
        style="@style/MainTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_title"
        android:textStyle="bold"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/textView1"
        style="@style/MainTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/confirm_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnYes"
            style="@style/DeleteButton"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/confirm_yes">
        </Button>

        <View
            android:layout_width="10sp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btnNo"
            style="@style/MainButton"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/confirm_no">
        </Button>
    </LinearLayout>
</LinearLayout>
