<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.andrey.electricitycalculator.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10sp"
            android:paddingEnd="10sp">

            <AutoCompleteTextView
                style="@style/MainTextStyle"
                android:id="@+id/inputLocationTwoRates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputLocation"
                android:textAlignment="center"
                android:inputType="textCapWords|text"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:maxLength="12"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/TitleTextStyle"
                    android:text="@string/day"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    style="@style/TitleTextStyle"
                    android:text="@string/night"/>

            </LinearLayout>

            <View
                android:id="@+id/viewTwoRates"
                android:layout_width="match_parent"
                android:layout_height="7dp">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/MainTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:layout_weight="8"/>

                <EditText
                    android:id="@+id/rateDay"
                    style="@style/MainTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:inputType="numberDecimal"
                    android:text="@string/space"
                    android:maxLength="6"
                    tools:ignore="LabelFor"/>

                <EditText
                    android:id="@+id/rateNight"
                    style="@style/MainTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:inputType="numberDecimal"
                    android:text="@string/space"
                    android:maxLength="6"
                    tools:ignore="LabelFor"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveTwoRates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:background="@drawable/main_button"
                    android:text="@string/rewriteRates"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/MainTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/previous"
                    android:textSize="20sp"/>
                <EditText
                    style="@style/MainTextStyle"
                    android:id="@+id/inputDayPrevious"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/input"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:maxLength="7"/>
                <EditText
                    style="@style/MainTextStyle"
                    android:id="@+id/inputNightPrevious"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/input"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:maxLength="7" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/MainTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/current"
                    android:textSize="20sp" />
                <EditText
                    style="@style/MainTextStyle"
                    android:id="@+id/inputDayCurrent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/input"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:maxLength="7"/>
                <EditText
                    style="@style/MainTextStyle"
                    android:id="@+id/inputNightCurrent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/input"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:maxLength="7"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCalculateTwoRates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:background="@drawable/main_button"
                    android:text="@string/calculate"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/MainTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:text="@string/delta"/>
                <TextView
                    style="@style/MainTextStyle"
                    android:id="@+id/deltaDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/nullNumber"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    style="@style/MainTextStyle"
                    android:id="@+id/deltaNight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/nullNumber"
                    android:textAlignment="center"
                    android:textSize="24sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/MainTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:text="@string/sum"/>
                <TextView
                    style="@style/MainTextStyle"
                    android:id="@+id/sumDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/nullMoney"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    style="@style/MainTextStyle"
                    android:id="@+id/sumNight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/nullMoney"
                    android:textAlignment="center"
                    android:textSize="24sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:text="@string/total"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/total"
                    style="@style/TitleTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/nullMoney"
                    android:textAlignment="center"
                    android:textSize="32sp" />

            </LinearLayout>

            <Button
                android:id="@+id/saveTwoRatesRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_button"
                android:text="@string/saveRecord"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
